# openctp

./: readme.md
ctp2EMT/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  FtdcTraderApiImpl.cpp  FtdcTraderApiImpl.h  readme.md
ctp2EMT/6.3.15_20190220/: CMakeLists.txt
ctp2EMT/6.3.15_20190220/MdApi/: CMakeLists.txt
ctp2EMT/6.3.15_20190220/TdApi/: CMakeLists.txt
ctp2EMT/6.3.19_P1_20200106/MdApi/: CMakeLists.txt
ctp2EMT/6.3.19_P1_20200106/TdApi/: CMakeLists.txt
ctp2EMT/6.5.1_20200908/: CMakeLists.txt
ctp2EMT/6.5.1_20200908/MdApi/: CMakeLists.txt
ctp2EMT/6.5.1_20200908/TdApi/: CMakeLists.txt
ctp2EMT/6.6.1_P1_20210406/MdApi/: CMakeLists.txt
ctp2EMT/6.6.1_P1_20210406/TdApi/: CMakeLists.txt
ctp2EMT/6.6.7_20220304/MdApi/: CMakeLists.txt
ctp2EMT/6.6.7_20220304/TdApi/: CMakeLists.txt
ctp2EMT/6.6.9_20220920/MdApi/: CMakeLists.txt
ctp2EMT/6.6.9_20220920/TdApi/: CMakeLists.txt
ctp2EMT/EMT/: emt_api.h  emt_quote_data_type.h  emt_quote_struct.h  quote_api.h  sse_hpf_define.h  sze_hpf_define.h
ctp2OST/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  FtdcTraderApiImpl.cpp  FtdcTraderApiImpl.h  UTApi.h  UTApiDataType.h  UTApiStruct.h
ctp2TAP/: readme.md
demo/print/ctpprint/: ctpprint.cpp
demo/print/qdpprint/: qdpprint.cpp  qdpprint.vcxproj
tools/PythonScripts/: export_rate.py
tools/ctpdump/: ctpdump.py
tools/ctptelnet/: ctptelnet.py
