cmake_minimum_required(VERSION 2.8)

set(mdapi thostmduserapi_se_6.3.15_20190220)
project(${mdapi})

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release")
endif()

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    add_definitions(-D BOOST_ALL_DYN_LINK)
  else()
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
  endif()
  add_definitions(-D ISLIB -D LIB_MD_API_EXPORT)
  set(boost_include E:/boost_1_73_0)
  set(boost_lib E:/boost_1_73_0/stage/lib)
else()
  add_compile_options(-std=c++11 -pthread)
  set(boost_include /usr/local/include)
  set(boost_lib /usr/local/lib)
endif()

include_directories(${PROJECT_SOURCE_DIR}/.. ${PROJECT_SOURCE_DIR}/../../EMT ${boost_include})
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  link_directories(${PROJECT_SOURCE_DIR}/../../EMT/win64 ${boost_lib})
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  link_directories(${PROJECT_SOURCE_DIR}/../../EMT/linux ${boost_lib})
endif()

add_library(${mdapi} SHARED ../../FtdcMdApiImpl.cpp)
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  target_link_libraries(${mdapi} emt_quote_api.lib)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  target_link_libraries(${mdapi} -lemt_quote_api)
endif()
set_target_properties(${mdapi} PROPERTIES OUTPUT_NAME "thostmduserapi_se")
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
